--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,11 +1,17 @@
+/* navbar height */
+:root {
+  --navbar-height: 40px;
+  --navbar-bg-color: #6aa6ff;
+}
+
 .root {
   box-sizing: border-box;
 }
 
 .navbar {
   width: 100%;
-  height: 40px;
-  background-color: #6aa6ff;
+  height: var(--navbar-height);
+  background-color: var(--navbar-bg-color);
   display: flex;
   justify-content: center;
 }
@@ -13,7 +19,6 @@
 .navbar-title {
   margin-right: 40%;
   font-size: 2em;
-
 }
 
 .navbar-settings {
